--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "re2",
-  "version": "1.16.0",
+  "version": "1.16.0-omg",
   "description": "Bindings for RE2: fast, safe alternative to backtracking regular expression engines.",
-  "homepage": "https://github.com/uhop/node-re2",
-  "bugs": "https://github.com/uhop/node-re2/issues",
+  "homepage": "https://github.com/omg/node-re2",
+  "bugs": "https://github.com/omg/node-re2/issues",
   "main": "re2.js",
   "types": "re2.d.ts",
   "directories": {
@@ -24,10 +24,10 @@
     "verify-build": "node scripts/verify-build.js",
     "rebuild": "node-gyp rebuild"
   },
-  "github": "https://github.com/uhop/node-re2",
+  "github": "https://github.com/omg/node-re2",
   "repository": {
     "type": "git",
-    "url": "git://github.com/uhop/node-re2.git"
+    "url": "git://github.com/omg/node-re2.git"
   },
   "keywords": [
     "RegExp",
