--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - v?[0-9]+.[0-9]+.[0-9]+.[0-9]+
       - v?[0-9]+.[0-9]+.[0-9]+
       - v?[0-9]+.[0-9]+
-      - "[0-9]+.[0-9]+.[0-9]+-omg"
+      - "[0-9]+.[0-9]+.[0-9]+-omg*"
 
 jobs:
   create-release:
